--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<h1>이철승 홈페이지입니다.</h1>
+<% @db_q.each do |db| %>
+	<h3>name : <%= db.name %></h3>
+	<p>content: <%= db.content %></p>
+<% end %>
+<a href="/">돌아가기</a>
